--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "Smappee.API",
+  "name": "mqqt.reader",
   "version": "1.0.0",
   "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"No tests yet...\""
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {},
-  "devDependencies": {}
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "mqtt": "^2.18.8",
+    "pg": "^7.4.3",
+    "request": "^2.88.0"
+  }
 }
