--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "mqtt": "^2.18.8",
     "pg": "^7.4.3",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "winston": "^3.3.3"
   }
 }
