--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "mqtt": "^2.18.8",
     "pg": "^8.5.1",
+    "pg-format": "^1.0.4",
     "request": "^2.88.0",
     "winston": "^3.3.3"
   }
